--- a/ausarbeitung-latex/text/3.tex
+++ b/ausarbeitung-latex/text/3.tex
@@ -7,7 +7,7 @@ Ziel der Case Study ist es, die Vor- und Nachteile der gegebenen Konzepte zu ver
 Um dies zu erreichen, wurde sich für die Simulation eines Produktionsprozesses - konkret Produktion von Tesla-Autos - entschieden.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{jreichwald-dhbw_wise_latex_template-fafad54e83ab/img/Prozessmodell.png}
+    \includegraphics[width=\textwidth]{ausarbeitung-latex/img/Prozessmodell.png}
     \caption{Strategisches Prozessmodell}
     \label{fig:bpmn}
 \end{figure}
@@ -23,7 +23,7 @@ Das fertige Produkt wird anschließend eingelagert und, sobald der Lagerbestand 
 Für die technische Umsetzung wurde als Datengrundlage eine SQL-basierte und damit relationale \ac{DB} geschaffen (MariaDB). Diese gilt im Rahmen der Simulation als Single-Point-of-Truth und repräsentiert damit den Zustand der Produktionshalle. Damit kann die \ac{DB} als logische Repräsentation oder Digital Twin des hypothetischen, \ac{CPS} \textit{Fabrik} betrachtet werden
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{jreichwald-dhbw_wise_latex_template-fafad54e83ab/img/ER-Diagramm.png}
+    \includegraphics[width=0.7\textwidth]{ausarbeitung-latex/img/ER-Diagramm.png}
     \caption{ER-Diagramm}
     \label{fig:er}
 \end{figure}
@@ -96,7 +96,7 @@ Die Übertragung der Konzepte Realtime-\ac{BI} und Operational-\ac{BI} in die vo
 \end{enumerate}
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.99\textwidth]{jreichwald-dhbw_wise_latex_template-fafad54e83ab/img/Architektur-Vertikal.png}
+    \includegraphics[width=0.99\textwidth]{ausarbeitung-latex/img/Architektur-Vertikal.png}
     \caption{Architektur}
     \label{fig:arch}
 \end{figure}
@@ -105,6 +105,6 @@ Technisch wurde sich bei der Simulationskomponente für eine Microservice-Archit
 Die \ac{DB}, sowie die Web-UI's werden über noez.de gehostet. Die gesamte Architektur findet sich in Abb. \ref{fig:arch}.
 \textbf{UI-Tools und Warum}
 
-\section{Anwendung Operational BI und Realtime BI} \label{abs:anwOP}
+\section{Anwendung Operational BI & Realtime BI} \label{abs:anwOP}
 \section{Ergebnisse}
 \textbf{verwendete Tools nicht praxisnahe --> andere Tool sind jedoch teuer deutlich teurer und komplexer}
