finalized Übertragung Chapter

--- a/ausarbeitung-latex/bibliography.bib
+++ b/ausarbeitung-latex/bibliography.bib
@@ -158,3 +158,38 @@ journal = {Harvard Business Review}
   volume={2},
   pages={314-319}
 }
+
+@book{Glucho2008,
+author = {Gluchowski, Peter and Gabriel, Roland and Dittmar, Carsten},
+booktitle = {Management Support Systeme und Business Intelligence},
+doi = {10.1007/978-3-540-68269-1},
+isbn = {978-3-540-68269-1},
+year = {2008}
+}
+
+@article{rutz,
+author = {Rutz, Dale and Nelakanti, Tara and Rahman, Nayem},
+year = {2012},
+pages = {257-264},
+title = {Practical Implications of Real Time Business Intelligence},
+volume = {20},
+journal = {Journal of Computing and Information Technology},
+doi = {10.2498/cit.1002081}
+}
+
+@inproceedings{inproceedings,
+author = {Hänel, Tom and Felden, Carsten},
+year = {2015},
+month = {10},
+pages = {147-159},
+title = {Linking Operational Business Intelligence with Value-Based Business Requirements},
+isbn = {978-3-319-25012-0},
+doi = {10.1007/978-3-319-25013-7_12}
+}
+@article{eckerson,
+author = {Eckerson, Wayne W.},
+year = {2007},
+title = {Best Practices in Operational BI}
+}
+
+@article{chaud, author = {Chaudhuri, Surajit and Dayal, Umeshwar and Narasayya, Vivek}, title = {An Overview of Business Intelligence Technology}, year = {2011}, issue_date = {August 2011}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, volume = {54}, number = {8}, issn = {0001-0782}, url = {https://doi.org/10.1145/1978542.1978562}, doi = {10.1145/1978542.1978562}, abstract = {BI technologies are essential to running today's businesses and this technology is going through sea changes.}, journal = {Commun. ACM}, month = aug, pages = {88–98}, numpages = {11} }
