--- a/ausarbeitung-latex/text/2.tex
+++ b/ausarbeitung-latex/text/2.tex
@@ -3,6 +3,21 @@
 \subsection{Business Intelligence}
 Früher wie auch heute hat der Faktor Zeit höchste Bedeutung für den Konkurrenzkampf auf marktwirtschaftlich organisierten Märkten. Dabei spielt es keine Rolle ob es sich um die Entwicklung und Einführung neuer Produkte, deren Produktion oder den Vertrieb handelt. Unternehmen, die am schnellsten auf sich verändernde Bedingungen reagieren können, haben einen erheblichen und mächtigen Vorteil im Konkurrenzkampf mit anderen Unternehmen. \autocite[Vgl.][S. 1]{Stalk1988} Dieser Vorteil kann nur genutzt werden, wenn Unternehmen in die Lage versetzt werden, Entscheidungen schnell, präzise und richtig zu treffen. Um Entscheidungsträger in dieser Weise unterstützen, haben sich in den letzten Jahrzehnten \ac{BI}-Lösungen etabliert.
 
-Erstmals taucht der Begriff \ac{BI} in dem Beitrag \enquote{A Business Intelligence System} von Hans Peter Luhn aus dem Jahr 1958 auf. Demnach handelt es sich bei \ac{BI} um ein automatisches und intelligentes System, dass Informationen für verschiedene Abteilungen automatisch zusammenfasst, um Aktionen daraus abzuleiten zu können. \autocite[Vgl.][S. 1]{Luhn1958ABI} Test
+Erstmals taucht der Begriff \ac{BI} in dem Beitrag \enquote{A Business Intelligence System} von Hans Peter Luhn aus dem Jahr 1958 auf. Demnach handelt es sich bei \ac{BI} um ein automatisches und intelligentes System, dass Informationen für verschiedene Abteilungen automatisch zusammenfasst, um Aktionen daraus abzuleiten zu können. \autocite[Vgl.][S. 1]{Luhn1958ABI} Seit diesem Beitrag haben sich \ac{BI}-Systeme stetig weiterentwickelt und ein gewaltiges Wachstum erfahren. Außerdem hat \ac{BI} seitdem zunehmend an Bedeutung gewonnen und ist inzwischen fester Bestandteil von vielen Unternehmen. 
+
+Heutzutage erweist sich eine einheitliche Definition des Begriffes \ac{BI}, aufgrund der Menge an Veröffentlichungen zu dem Thema und vielen verschiedenen Auffassungen, als schwierig. Betrachtet man gängige Definitionen, fällt auf, dass in vielen Definitionen der Begriff Analyse fällt. So auch in der Definition, die in dieser Arbeit verwendet wird, von Gluchowski, Gabriel und Dittmar: \ac{BI} umfasst analyseorientierte Anwendungen, die zur Aufbereitung und Präsentation von multidimensional organisierten Daten dienen. Ziel ist die zielgerichtete Analyse von Daten, um das eigene Geschäft besser verstehen zu können und das Management bei Entscheidungen zu unterstützen. \autocite[Vgl.][S. 89]{Glucho2008} 
+
+Mit der Zeit wurde der Begriff \ac{BI} immer weiter gefasst und durch neue Konzepte und Technologien erweitert. Ein Teil davon ist Operational \& Real-Time \ac{BI}. Dessen Zusammenwirken mit traditionellen BI-Systemen und eine Einordnung ist Bestandteil des nächsten Unterkapitels.
+
 \subsection{Operational \& Real-Time BI}
+In frühen BI-Systemen kamen die zu analysierenden Daten zum größten Teil aus den Informationssystemen (z.B. ERP-System oder CRM-System) des Unternehmens. Dies erfolgt durch den sogenannten ETL-Prozess: Die Daten werden aus den Informationssystemen extrahiert, transformiert und in das Data Warehouse geladen, um anschließend analysiert werden zu können. \autocite[Vgl.][S. 132]{Glucho2008} Durch technische Limitationen, insbesondere hohe Latenzen bei der Datenbeschaffung, werden bei klassischen BI-System ausschließlich historische Daten analysiert. Dadurch sind die daraus resultierenden Entscheidungen von strategischer und taktischer Bedeutung und haben eine zeitlichen von Tagen bis Jahren. \autocite[vgl.][S. 36]{Sandu2008} An dieser Stelle setzen die Konzepte von Operational \& Real-Time BI an. 
+
+Heutzutage haben Unternehmen viel mehr Daten zur Verfügung als noch vor 10 Jahren. Durch Social Media, Sensoren oder das sogenannte Internet der Dinge fallen sekündlich Daten an, welche für Unternehmen potentiell von Interesse sein können. Außerdem erzeugen und sammeln Unternehmen immer mehr operative Daten. Um Schlüsse aus diesen Daten ziehen zu können, müssen BI-Systeme die Daten nicht mehr täglich / wöchentlich aktualisieren, sondern innerhalb weniger Sekunden. Hier stoßen traditionelle BI-Systeme an ihre Grenzen. \autocite[Vgl.][S. 257]{rutz} Das Ziel von Operational \& Real-Time BI ist demnach das Management und Optimieren des täglichen Geschäftsbetriebs. \autocite[Vgl.][S. 36]{Sandu2008}
+
+Operational BI bezieht sich auf Entscheidungen, die durch die Analysen getroffen werden. Diese basieren weitestgehend auf operativen Daten. Es handelt sich dabei um ein Konzept zur Analyse von Geschäftsprozessen, zugunsten einer kontinuierlichen Verbesserung von Prozessgestaltung und -ausführung. \autocite[Vgl.][S. 148]{inproceedings} Außerdem werden durch dieses Konzept Entscheidungsträger im operativen Umfeld dabei unterstützt situationsbedingt in Prozesse einzugreifen. Voraussetzung dafür ist, dass die Daten in Echtzeit vorliegen. Deshalb wird heutzutage Operational \& Real-Time BI fast immer synonym miteinander verwendet. Dies war nicht immer der Fall. Anfangs sprach man auch von Operational BI wenn die Daten tagesaktuell waren. \autocite[Vgl.][S. 5]{eckerson} 
+
+Wie bereits erwähnt, versteht man heutzutage unter Operational \& Real-Time BI oftmals das Gleiche. Auch in der Literatur findet man oft, dass sich Operational BI zu Real-Time BI entwickelt hat. \autocite[Vgl.][S. 36]{Sandu2008} Dabei weisen Real-Time Bi-Systeme ähnliche Architekturen wie traditionelle BI-Systeme auf. Zusätzlich findet man Mechanismen zur kontinuierlichen Datenintegration sowie eine aktive Decision-Engine. \autocite[Vgl.][S. 96]{chaud} Real-Time Bi-Systeme sind demnach gekennzeichnet durch keine bzw. eine sehr niedrige Latenz von Datenentstehung und der abgeleiteten Entscheidung.
+
+Zusammenfassend lässt sich sagen, dass Operational BI dazu dient Geschäftsprozesse zu analysieren und situationsbedingt einzugreifen. Voraussetzung dafür ist, dass die Daten in Echtzeit / ohne Latenz vorliegen. Dies ist das Hauptmerkmal von Real-Time BI. Die meisten Daten von Real-Time BI-Systemen sind operative Daten von beispielsweise Sensoren oder Social Media. Deshalb werden beide Begriffe oftmals synonym verwendet. Nun stellt sich die Frage, welche Vor- bzw. Nachteile diese Konzepte bringen und was die Implikationen für die Praxis sind. Dies ist Bestandteil des nächsten Unterkapitels.
+
 \section{Vor- und Nachteile mit deren Auswirkungen in der Praxis}
